<!--
Copyright 2016 IBM Corp.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <string name="app_name">PMFDemo</string>
    <string name="remaining_attempts">Remaining attempts %1$s</string>
    <string name="hello_user">Hello, %1$s</string>
    <string name="greeting">Run the Android JUnit Tests. Alternatively you take a look at logcat and modify MainActivity.java</string>
    <string name="action_settings">Settings</string>


    <string name="required">Required</string>
    <string name="invalid_format">Invalid Format</string>

    <string name="user_label">User (optional)</string>
    <string name="pass_label">Pass (optional)</string>
    <string name="initialize_label">Initialize (Login/Open)</string>
    <string name="close_label">Close All (Logout)</string>
    <string name="destroy_label">Destroy Everything</string>
    <string name="remove_label">Remove Collection</string>
    <string name="name_label">Enter Name</string>
    <string name="age_label">Enter Age</string>
    <string name="add_data_label">Add Data</string>
    <string name="search_label">Search Field</string>
    <string name="limit_label">Limit (optional)</string>
    <string name="offset_label">Offset (optional)</string>
    <string name="find_by_name_label">Find By Name (Fuzzy Search)</string>
    <string name="find_by_age_label">Find By Age (Exact Search)</string>
    <string name="find_all_label">Find All</string>
    <string name="enter_id_label">Enter Id</string>
    <string name="find_by_id_label">Find (by id)</string>
    <string name="replace_by_id_label">Replace (by id)</string>
    <string name="remove_by_id_label">Remove (by id)</string>
    <string name="load_from_adapter_label">Load Data From Adapter</string>
    <string name="get_push_required_label">Get Dirty Documents</string>
    <string name="push_changes_to_adapter_label">Push Changes to Adapter</string>
    <string name="count_all_label">Count All</string>
    <string name="count_name_label">Enter Name to Count</string>
    <string name="count_by_name_label">Count By Name</string>
    <string name="old_password_label">Old Password</string>
    <string name="new_password_label">New Password</string>
    <string name="change_password_label">Change Password</string>
    <string name="get_file_info_label">Get FileInfo</string>
    <string name="console_label">console:</string>



    <string name="init_message">Collection initialized</string>
    <string name="destroy_message">Destroy finished successfully</string>
    <string name="close_message">JSONStore closed</string>
    <string name="remove_collection_message">Removed all data in the collection</string>
    <string name="add_message">Data added to the collection</string>

    <string name="remove_message">Document with id:%d removed</string>
    <string name="replace_message">Document with id:%d replaced successfully.</string>
    <string name="not_found_message">Document with id:%d NOT FOUND</string>

    <string name="count_all_message">Documents in the collection: %d</string>
    <string name="dirty_docs_message">Dirty Documents in the collection: %d</string>
    <string name="docs_found_message">Documents found: %d</string>
    <string name="update_docs_message">Documents updated: %d</string>
    <string name="add_docs_message">Documents added to collection: %d</string>
    <string name="docs_pushed_message">Documents pushed to adapter: %d</string>
    <string name="count_name_message" formatted="false">Documents in the collection with name(%s) : %d</string>
    <string name="password_change_message">Password changed successfully</string>
    <string name="application_logo">Application Logo</string>
    <string name="one_stop_destination_for_all_your_shoping_needs">One stop destination for all your shoping needs</string>
    <string name="acme_mall">ACME Mall</string>
    <string name="quick_shopping">Quick Shopping</string>
    <string name="support">Support</string>
    <string name="feature_button">Feature Button</string>
    <string name="file_info_message">JSONStore FileInfo:</string>
    <string name="hello_push">Hello Push!</string>
    <string name="btn_is_push_supported">Is Push Supported</string>
    <string name="btn_register_device">Register Device</string>
    <string name="btn_get_tags">Get Tags</string>
    <string name="btn_subscribe">Subscribe</string>
    <string name="btn_get_subscriptions">Get Subscriptions</string>
    <string name="btn_unsubscribe">Unsubscribe</string>
    <string name="btn_unregister_device">Unregister Device</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="label_remaining_attempts">Remaining Attempts: </string>
    <string name="remember_me_label">Remember Me</string>
</resources>
